--- a/contato.html
+++ b/contato.html
@@ -38,7 +38,7 @@
                 <li><a href="modalidades.html">MODALIDADES</a></li>
                 <li><a href="campeonatos.html">CAMPEONATOS</a></li>
                 <li><a href="javascript:void(0);">EVENTOS</a></li>
-                <li><a href="javascript:void(0);">LOJA VIRTUAL</a></li>
+                <li><a href="loja_virtual.html">LOJA VIRTUAL</a></li>
                 <li><a href="contato.html">CONTATO</a></li>
             </ul>
         </nav>
