--- a/loja_virtual.html
+++ b/loja_virtual.html
@@ -6,18 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Página web da Atlética da FATEC Zona Leste">
     <meta name="keywords" content="Atlética, FATEC, Zona Leste">
-    <meta name="author" content="Alan Serafim, Douglas Silva, Nataly Correia, Thais Almeida">
+    <meta name="author" content="Alan Serafim, Douglas Silva, Thais Almeida">
     <link rel="stylesheet" href="css/estilo.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script type="text/javascript" src="JS/contraste.js"></script>
     <!--<link rel="icon" href="favicon.ico" type="image/x-icon">-->
-    <title>Modalidades</title>
+    <title>LOJA VIRTUAL</title>
 </head>
 <body>
     <header>
         <div id="acessibilidade">
             <ul id="atalhos">
-                <li><a href="#main-modalidades" accesskey="1" title="Ir diretamente para o conteúdo">Ir para o conteúdo [1]</a></li>
+                <li><a href="#main-lojavirtual" accesskey="1" title="Ir diretamente para o conteúdo">Ir para o conteúdo [1]</a></li>
                 <li><a href="#menu-topo" accesskey="2" title="Ir diretamente para o menu">Ir para o menu [2]</a></li>
                 <li><a href="#rodape" accesskey="3" title="Ir diretamente para o rodapé">Ir para o rodapé [3]</a></li>
                 <li id="pgacess"><a href="acessibilidade.html" title="Ir para a página de Acessibilidade">ACESSIBILIDADE</a></li>
@@ -41,50 +41,55 @@
             </ul>
         </nav>
     </header>
-    <main id="main-modalidades">
-        <img id="banner-modalidades" src="img/basquete_partida.jpg" alt="Imagem em preto e branco de uma partida de jogo de basquetebol com um jogador preste a arremessar a bola">
-        <h1 class="titulo">MODALIDADES</h1>
-        <ul class="breadcrumb">
+    <main id="main-lojavirtual">         
+            <img id="banner-lojavirtual" src="img/Design sem nome.jpg" alt="Imagem em amarelo mostarda há uma imagem do lado esquerdo em preto de um homem empurrando um carrinho de compras e do lado direito uma figura em preto de uma coruja">
+            <h1 class="titulo">LOJA VIRTUAL</h1>
+            <ul class="breadcrumb">
             <li><a href="index.html">Início</a></li>
-            <li>Modalidades</li>
+            <li>Loja Virtual</li>
         </ul>
-        <section id="caixa-mural-modalidades">
-            <div class="quadro-mural-modalidaes">
-                <ul id="mural-modalidades">
-                    <li><img class="box-imagem-modalidades" src="img/futsal.png" alt="Imagem com um desenho representando um jogador de futsal na cor preta"></li>
-                    <li>FUTSAL</li>
+        <section id="caixa-mural-produtos">
+            <div class="quadro-mural-produtos">
+                <ul id="mural-produtos">
+                    <li><img class="box-imagem-produtos" src="img/blusa_preta.webp" alt="Imagem de um moletom com mangas longas, com touca e de cor preta"></li>
+                    <li><h2>Moletom Atlética - Preto</h2></li>
+                    <li>(Unissex, Tamanhos Diversos)</li>
+                    <li>Valor: R$100,00 em até 2x s/ juros</li>
                 </ul>
-                <ul id="mural-modalidades">
-                    <li><img class="box-imagem-modalidades" src="img/volei.png" alt="Imagem com um desenho representando uma rede e uma bola de voleibol na cor preta"></li>
-                    <li>VOLEIBOL</li>
+                <ul id="mural-produtos">
+                    <li><img class="box-imagem-produtos" src="img/blusa_vermelha.webp" alt="Imagem de um moletom com mangas longas, com touca e de cor vermelha"></li>
+                     <li><h2>Moletom Atlética - Vermelho</h2></li>
+                    <li>(Unissex, Tamanhos Diversos)</li>
+                    <li>Valor: R$100,00 em até 2x s/ juros</li>
                 </ul>
-                <ul id="mural-modalidades">
-                    <li><img class="box-imagem-modalidades" src="img/basquete.png" alt="Imagem com um desenho representando uma cesta de basquetebol na cor preta"></li>
-                    <li>BASQUETEBOL</li>
+                <ul id="mural-produtos">
+                    <li><img class="box-imagem-produtos" src="img/blusa_branca.webp" alt="Imagem de um moletom com mangas longas, com touca e de cor branca"></li>
+                  <li><h2>Moletom Atlética - Branco</h2></li>
+                    <li>(Unissex, Tamanhos Diversos)</li>
+                    <li>Valor: R$100,00 em até 2x s/ juros</li>
                 </ul>
-                <ul id="mural-modalidades">
-                    <li><img class="box-imagem-modalidades" src="img/natacao.png" alt="Imagem com um desenho representando um competidor de natação na cor preta"></li>
-                    <li>NATAÇÃO</li>
+                <ul id="mural-produtos">
+                    <li><img class="box-imagem-produtos" src="img/collegepreta.webp" alt="Imagem de um moletom college com mangas longas, abertura na frente com botões e de cor preta"></li>
+                    <li><h2>College Atlética - Preto</h2></li>
+                    <li>(Unissex, Tamanhos Diversos)</li>
+                    <li>Valor: R$150,00 em até 3x s/ juros</li>
                 </ul>
-                <ul id="mural-modalidades">
-                    <li><img class="box-imagem-modalidades" src="img/handbol.png" alt="Imagem com um desenho representando um jogador de handebol na cor preta"></li>
-                    <li>HANDEBOL</li>
+                <ul id="mural-produtos">
+                    <li><img class="box-imagem-produtos" src="img/collegepreta.webp" alt="Imagem de um moletom college com mangas longas, abertura na frente com botões e de cor vermelha"></li>
+                     <li><h2>College Atlética - Vermelho</h2></li>
+                    <li>(Unissex, Tamanhos Diversos)</li>
+                    <li>Valor: R$150,00 em até 3x s/ juros</li>
                 </ul>
-                <ul id="mural-modalidades">
-                    <li><img class="box-imagem-modalidades" src="img/truco.png" alt="Imagem com um desenho representando cartas de baralho na cor preta"></li>
-                    <li>TRUCO</li>
+                <ul id="mural-produtos">
+                    <li><img class="box-imagem-produtos" src="img/college_azul.webp" alt="Imagem de um moletom college com mangas longas, abertura na frente com botões e de cor azul"></li>
+                   <li><h2>Atlética - Azul<h2></li>
+                    <li>(Unissex, Tamanhos Diversos)</li>
+                    <li>Valor: R$150,00 em até 3x s/ juros</li>
                 </ul>
-                <ul id="mural-modalidades">
-                    <li><img class="box-imagem-modalidades" src="img/xadrez.png" alt="Imagem com um desenho representando uma peça de xadrez e um quadro de estratégia na cor preta"></li>
-                    <li>XADREZ</li>
-                </ul>  
-                <ul id="mural-modalidades">
-                    <li><img class="box-imagem-modalidades" src="img/ping_pong.png" alt="Imagem com um desenho representando uma raquete e uma bola de tênis de mesa na cor preta"></li>
-                    <li>TÊNIS DE MESA</li>
-                </ul>                    
+                <ul id="mural-produtos">      
             </div>
         </section>
-        <p>Os horários e locais dos treinos são disponibilizados na página da Atlética no Facebook e nos grupos da Fatec ZL no WhatsApp. Fique ligado!</p>
+        <p>Os Produtos podem ser encomendados contatando a página da Atlética no Facebook, Instagram e nos grupos da Fatec ZL no WhatsApp. Fique ligado!</p>
     </main>
     <footer id="rodape">
         <div id="localizacao">
@@ -99,7 +104,7 @@
             <img id="ico-email" src="img/email_img.ico" alt="imagem do ícone de email na cor branca">
             <p>fateczlatletica@gmail.com</p>
         </div>
-        <p>Desenvolvido por Alan Serafim, Douglas Silva, Nataly Correia e Thais Almeida &copy; 2021.</p>
+        <p>Desenvolvido por Alan Serafim, Douglas Silva e Thais Almeida &copy; 2021.</p>
     </footer>
 </body>
 </html>
