retorno de versao

--- a/campeonatos.html
+++ b/campeonatos.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/estilo.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script type="text/javascript" src="JS/contraste.js"></script>
+    <script type="text/javascript" src="JS/fonte.js"></script>
     <!--<link rel="icon" href="favicon.ico" type="image/x-icon">-->
     <title>Campeonatos</title>
 </head>
@@ -42,16 +43,26 @@
         </nav>
     </header>
     <main id="main-campeonatos">
+        
         <img id="banner-campeonatos" src="img/campeonatos_mural.png" alt="Imagem de um troféu encima de uma bola de futebol">
         <h1 class="titulo">CAMPEONATOS</h1>
         <ul class="breadcrumb">
             <li><a href="index.html">Início</a></li>
             <li>Campeonatos</li>
         </ul>
-        <section id="caixa-mural-modalidades">
+        <fieldset>
+        <ul class="campeonatos">
        
-        </section>
-        <p>Fique por dentro dos campeonatos que estão rolando, e as classificações</p>
+            <li><a href="#">Campeonato de volei masculino</a></li>
+            <li><a href="#">Campeonato de volei Feminino</a></li>
+            <li><a href="#">Campeonato de Futsal masculino</a></li>
+            <li><a href="#">Campeonato de Futsal Feminino</a></li>
+            <li><a href="#">Campeonato de Xadrez</a></li>
+            <li><a href="#">Campeonato de Basquete masculino</a></li>
+            <li><a href="#">Campeonato de Basquete feminino</a></li>
+        </ul>
+    </fieldset>
+    <br>
     </main>
     <footer id="rodape">
         <div id="localizacao">
