--- a/contato.html
+++ b/contato.html
@@ -12,6 +12,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.16/jquery.mask.min.js" integrity="sha512-pHVGpX7F/27yZ0ISY+VVjyULApbDlD0/X0rgGbTqCE7WFW5MezNTWG/dnhtbBuICzsd0WQPgpE4REBLv+UqChw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script type="text/javascript" src="JS/maskcontato.js"></script>
     <script type="text/javascript" src="JS/contraste.js"></script>
+    <script type="text/javascript" src="JS/fonte.js"></script>
     <!--<link rel="icon" href="favicon.ico" type="image/x-icon">-->
     <title>Document</title>
 </head>
@@ -54,7 +55,7 @@
                 <label for="data" class="required">Data de Nascimento</label><br>
                 <input type="date" name="data" id="data" required><br>
                 <label for="celular" class="celular">Celular</label><br>
-                <input type="tel" name="celular" id="celular" placeholder="(11) 9 9999-9999"><br>
+                <input type="tel" name="celular" id="celular" required placeholder="(11) 9 9999-9999"><br>
                 <label for="email" class="required">E-mail</label><br>
                 <input type="email" name="e-mail" id="e-mail" required placeholder="seuemail@site.com.br"><br>
             </fieldset>
@@ -72,6 +73,7 @@
             </fieldset><br>
             <input type="submit" name="enviar" id="enviar" value="Enviar"> <input type="reset" name="limpar" id="limpar" value="Limpar">
           </form> 
+          <br>
         </section>
     </main>
     <footer>
