--- a/loja_virtual.html
+++ b/loja_virtual.html
@@ -38,6 +38,7 @@
                 <li><a href="javascript:void(0);">EVENTOS</a></li>
                 <li><a href="loja_virtual.html">LOJA VIRTUAL</a></li>
                 <li><a href="contato.html">CONTATO</a></li>
+                <script type="text/javascript" src="JS/fonte.js"></script>
             </ul>
         </nav>
     </header>
