--- a/modalidades.html
+++ b/modalidades.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/estilo.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script type="text/javascript" src="JS/contraste.js"></script>
+    <script type="text/javascript" src="JS/fonte.js"></script>
     <!--<link rel="icon" href="favicon.ico" type="image/x-icon">-->
     <title>Modalidades</title>
 </head>
