--- a/eventos.html
+++ b/eventos.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Página web da Atlética da FATEC Zona Leste">
     <meta name="keywords" content="Atlética, FATEC, Zona Leste">
-    <meta name="author" content="Alan Serafim, Douglas Silva, Nataly Correia, Pablo Pontes, Thais Almeida">
+    <meta name="author" content="Alan Serafim, Douglas Silva, Nataly Correia, Thais Almeida">
     <link rel="stylesheet" href="css/estilo.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script type="text/javascript" src="JS/contraste.js"></script>
     <script type="text/javascript" src="JS/fonte.js"></script>
     <!--<link rel="icon" href="favicon.ico" type="image/x-icon">-->
-    <title>Campeonatos</title>
+    <title>Quem Somos</title>
 </head>
 <body>
     <header>
@@ -42,27 +42,32 @@
             </ul>
         </nav>
     </header>
-    <main id="main-campeonatos">
-        
-        <img id="banner-campeonatos" src="img/campeonatos_mural.png" alt="Imagem de um troféu encima de uma bola de futebol">
-        <h1 class="titulo">CAMPEONATOS</h1>
-        <ul class="breadcrumb">
-            <li><a href="index.html">Início</a></li>
-            <li>Campeonatos</li>
-        </ul>
-        <fieldset>
-        <ul class="campeonatos">
-       
-            <li><a href="#">Campeonato de volei masculino</a></li>
-            <li><a href="#">Campeonato de volei Feminino</a></li>
-            <li><a href="#">Campeonato de Futsal masculino</a></li>
-            <li><a href="#">Campeonato de Futsal Feminino</a></li>
-            <li><a href="#">Campeonato de Xadrez</a></li>
-            <li><a href="#">Campeonato de Basquete masculino</a></li>
-            <li><a href="#">Campeonato de Basquete feminino</a></li>
-        </ul>
-    </fieldset>
-    <br>
+    <main id="main-eventos">
+        <h1 class="titulo">EVENTOS DO MÊS DE FEVEREIRO</h1>
+        <img id="banner-eventos" src="img/baner_eventos_atletica.jpg" alt=" imagem em vermelho e amarelo com desenho de uma coruja com uma caneca de cerveja as siglas AFZL e saldação de boas vindas aos bixos da fatec ">
+            <ul class="breadcrumb">
+                <li><a href="index.html">Início</a></li>
+                <li>Evento</li>
+            </ul>
+        <section id="caixa-mural-eventos">
+            <div class="quadro-mural-eventos">
+                <ul id="mural-eventos">
+                    <li><img class="box-imagem-eventos" src="img/eventos_Interfatec_atletica.png" alt="Imagem de um baner dando boas vindas ao calouros de cor amarela e vermelha com dezenho de um coruja segurando um copo de cerveja"></li>
+                    <li><h2>INTERFATEC</h2></li>
+                    <li></li><P>Foi dada a largada. A INTER 2022 vem aí! Saíram os valores dos pacotes e as vendas já começaram.</p></li>
+                </ul>
+                <ul id="mural-eventos">
+                    <li><img class="box-imagem-eventos" src="img/eventos_multiram_atletica.jpg" alt="Imagem com um desenho representando um jogador de futsal na cor preta"></li>
+                    <li><h2>MULTIRAM DA LIMPEZA 2022</h2></li>
+                    <li><p>O mutirão ocorrerá na quinta-feira, dia 21, a partir das 8h da manhã. Obrigado pela solidariedade e ajuda. E para quem não puder comparecer, ajude-nos na divulgação, para que assim mais pessoas sejam informadas.</p></li>
+                </ul>
+                 <ul id="mural-eventos">
+                    <li><img class="box-imagem-eventos" src="img/eventos_trote_atletica.jpg" alt="Imagem com um desenho representando um jogador de futsal na cor preta"></li>
+                    <li><h2>Trote FATEC ZONA LESTE</h2></li>
+                    <li><p>TODOS OS BIXOS QUE PARTICIPAREM DO TROTE, VÃO CONCORRER A UMA CANECA COM TIRANTE!!! E AOS 50 PRIMEIROS QUE COMPRAREM SEU INGRESSO PARA FESTA CONCORREM A UM COLLEGE.</p></li>  
+                </ul>   
+            </div>       
+        </section>
     </main>
     <footer id="rodape">
         <div id="localizacao">
@@ -77,7 +82,7 @@
             <img id="ico-email" src="img/email_img.ico" alt="imagem do ícone de email na cor branca">
             <p>fateczlatletica@gmail.com</p>
         </div>
-        <p>Desenvolvido por Alan Serafim, Douglas Silva, Nataly Correia, Pablo Pontes e Thais Almeida &copy; 2021.</p>
+        <p>Desenvolvido por Alan Serafim, Douglas Silva, Nataly Correia e Thais Almeida &copy; 2021.</p>
     </footer>
 </body>
 </html>
