--- a/loja_virtual.html
+++ b/loja_virtual.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/estilo.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script type="text/javascript" src="JS/contraste.js"></script>
+    <script type="text/javascript" src="JS/fonte.js"></script>
     <!--<link rel="icon" href="favicon.ico" type="image/x-icon">-->
     <title>LOJA VIRTUAL</title>
 </head>
@@ -35,10 +36,9 @@
                 <li><a href="quemsomos.html">QUEM SOMOS</a></li>
                 <li><a href="modalidades.html">MODALIDADES</a></li>
                 <li><a href="campeonatos.html">CAMPEONATOS</a></li>
-                <li><a href="javascript:void(0);">EVENTOS</a></li>
+                <li><a href="eventos.html">EVENTOS</a></li>
                 <li><a href="loja_virtual.html">LOJA VIRTUAL</a></li>
                 <li><a href="contato.html">CONTATO</a></li>
-                <script type="text/javascript" src="JS/fonte.js"></script>
             </ul>
         </nav>
     </header>
