eventos ajuste de banner

--- a/eventos.html
+++ b/eventos.html
@@ -43,9 +43,9 @@
         </nav>
     </header>
     <main id="main-eventos">
-        <h1 class="titulo">EVENTOS DO MÊS DE FEVEREIRO</h1>
-        <img id="banner-eventos" src="img/baner_eventos_atletica.jpg" alt=" imagem em vermelho e amarelo com desenho de uma coruja com uma caneca de cerveja as siglas AFZL e saldação de boas vindas aos bixos da fatec ">
-            <ul class="breadcrumb">
+        <div class="fundo-banner"></div>
+        <h1 class="titulo">EVENTOS</h1>  
+        <ul class="breadcrumb">
                 <li><a href="index.html">Início</a></li>
                 <li>Evento</li>
             </ul>
