--- a/contato.html
+++ b/contato.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Página web da Atlética da FATEC Zona Leste">
     <meta name="keywords" content="Atlética, FATEC, Zona Leste">
-    <meta name="author" content="Alan Serafim, Douglas Silva, Nataly Correia, pablo Pontes, Thais Almeida">
+    <meta name="author" content="Alan Serafim, Douglas Silva, Nataly Correia, Pablo Pontes, Thais Almeida">
     <link rel="stylesheet" href="css/estilo.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.16/jquery.mask.min.js" integrity="sha512-pHVGpX7F/27yZ0ISY+VVjyULApbDlD0/X0rgGbTqCE7WFW5MezNTWG/dnhtbBuICzsd0WQPgpE4REBLv+UqChw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
@@ -45,7 +45,11 @@
         </nav>
     </header>
     <main id="conteudo">
-        <h1>FALE CONOSCO</h1>
+        <h1 class="titulo">FALE CONOSCO</h1>
+        <ul class="breadcrumb">
+            <li><a href="index.html">Início</a></li>
+            <li>Fale Conosco</li>
+        </ul>
         <section>
         <form name="contato" id="contato" method="POST">
             <fieldset>
