--- a/eventos.html
+++ b/eventos.html
@@ -64,7 +64,7 @@
                  <ul id="mural-eventos">
                     <li><img class="box-imagem-eventos" src="img/eventos_trote_atletica.jpg" alt="Imagem com um desenho representando um jogador de futsal na cor preta"></li>
                     <li><h2>Trote FATEC ZONA LESTE</h2></li>
-                    <li><p>TODOS OS BIXOS QUE PARTICIPAREM DO TROTE, VÃO CONCORRER A UMA CANECA COM TIRANTE!!! E AOS 50 PRIMEIROS QUE COMPRAREM SEU INGRESSO PARA FESTA CONCORREM A UM COLLEGE.</p></li>  
+                    <li><p>Todos os bixos que participarem do trote, vão concorrer a uma CANECA com tirante!!! E aos 50 primeiros que comprarem seu ingresso para festa concorrem a uma COLLEGE da Atlética.</p></li>  
                 </ul>   
             </div>       
         </section>
