--- a/index.html
+++ b/index.html
@@ -54,31 +54,31 @@
                 </ul>
                 <ul id="mural">
                     <li><img class="box-imagem" src="img/logo_fatec_colorido.png" alt="preencher"></li>
-                    <li>texto texto texto textotexto textotexto textotexto textotexto textotexto texto</li>
+                    <li>Descrição da imagem</li>
                 </ul>
                 <ul id="mural">
                     <li><img class="box-imagem" src="img/logo_fatec_colorido.png" alt="preencher"></li>
-                    <li>texto texto texto textotexto textotexto textotexto textotexto textotexto texto</li>
+                    <li>Descrição da imagem</li>
                 </ul>
                 <ul id="mural">
                     <li><img class="box-imagem" src="img/logo_fatec_colorido.png" alt="preencher"></li>
-                    <li>texto texto texto textotexto textotexto textotexto textotexto textotexto texto</li>
+                    <li>Descrição da imagem</li>
                 </ul>
                 <ul id="mural">
                     <li><img class="box-imagem" src="img/logo_fatec_colorido.png" alt="preencher"></li>
-                    <li>texto texto texto textotexto textotexto textotexto textotexto textotexto texto</li>
+                    <li>Descrição da imagem</li>
                 </ul>
                 <ul id="mural">
                     <li><img class="box-imagem" src="img/logo_fatec_colorido.png" alt="preencher"></li>
-                    <li>texto texto texto textotexto textotexto textotexto textotexto textotexto texto</li>
+                    <li>Descrição da imagem</li>
                 </ul>
                 <ul id="mural">
                     <li><img class="box-imagem" src="img/logo_fatec_colorido.png" alt="preencher"></li>
-                    <li>texto texto texto textotexto textotexto textotexto textotexto textotexto texto</li>
+                    <li>Descrição da imagem</li>
                 </ul>
                 <ul id="mural">
                     <li><img class="box-imagem" src="img/logo_fatec_colorido.png" alt="preencher"></li>
-                    <li>texto texto texto textotexto textotexto textotexto textotexto textotexto texto</li>
+                    <li>Descrição da imagem</li>
                 </ul>
             </div>
         </section>
