--- a/quemsomos.html
+++ b/quemsomos.html
@@ -49,7 +49,6 @@
             <li><a href="index.html">Início</a></li>
             <li>Quem somos</li>
         </ul>
-
         <section id="historia">
             <h1>HISTÓRIA</h1>
             <p>Fundada em 2005, após a participação no primeiro Interfatec em Praia Grande. A Atlética Fatec Zona Leste tem como símbolo, a Coruja. Pois, antigamente ao fundo de sua quadra existia um ninho, onde corujas sobrevoavam os treinos esportivos e campeonatos internos. Com sua participação ativa nas modalidades coletivas: feminino e masculino alcançou em 2005, 2006 e 2007 o terceiro lugar no Interfatec. Também participou dos Jogos da Cidade. Infelizmente, após 2008, se extinguiu. E a responsabilidade das atividades esportivas foi para o Diretório Acadêmico Fatec Zona Leste, exercendo a mesma função que a Atlética, mantendo seus campeonatos internos de futsal.</p>
@@ -65,9 +64,9 @@
             <h1>DIRETORIA 2021</h1>
             <img id="diretoria" src="img/diretoria.jpg" alt="DESCREVER">
             <div class="membro">
-                <h2>Alan Nunes Serafim</h2>
+                <h2>Nome</h2>
                 <h3>Presidente</h3>
-                <h4>Contato - alan.serafim@fatec.sp.gov.br</h4>
+                <h4>Contato - email@fatec.sp.gov.br</h4>
             </div>
             <div class="membro">
                 <h2>Nome</h2>
@@ -94,7 +93,6 @@
                 <h3>Diretor de Esportes</h3>
                 <h4>Contato - email@fatec.sp.gov.br</h4>
             </div>
-           
         </section>
     </main>
     <footer id="rodape">
