--- a/loja_virtual.html
+++ b/loja_virtual.html
@@ -11,6 +11,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script type="text/javascript" src="JS/contraste.js"></script>
     <script type="text/javascript" src="JS/fonte.js"></script>
+    <script type="text/javascript" src="JS/menu_movel.js"></script>
     <!--<link rel="icon" href="favicon.ico" type="image/x-icon">-->
     <title>LOJA VIRTUAL</title>
 </head>
@@ -31,7 +32,7 @@
         <a href="index.html"><img id="logo-topo" src="img/logo_atletica_semfundo.png" alt="Imagem do logo da Atlética da Fatec Zona Leste com um escudo nas cores vermelha e amarela e uma coruja branca"></a>
         <nav>
             <label for="bt_menu"><img id="dropdown" src="img/menu_white.ico" alt="botão de menu"></label>
-            <input type="checkbox" id="bt_menu">
+            <input type="checkbox" id="bt_menu" onclick="MudaImg()">
             <ul id="menu-topo">
                 <li><a href="quemsomos.html">QUEM SOMOS</a></li>
                 <li><a href="modalidades.html">MODALIDADES</a></li>
