Ajuste finais responsividade campeonatos

--- a/acessibilidade.html
+++ b/acessibilidade.html
@@ -96,7 +96,7 @@
             <img id="ico-email" src="img/email_img.ico" alt="imagem do ícone de email na cor branca">
             <p>fateczlatletica@gmail.com</p>
         </div>
-        <p>Desenvolvido por Alan Serafim, Douglas Silva, Nataly Correia e Thais Almeida &copy; 2021.</p>
+        <p>Desenvolvido por Alan Serafim, Douglas Silva, Pablo Pontes e Thais Almeida &copy; 2021.</p>
         
     </footer>
 </body>
