--- a/campeonatos.html
+++ b/campeonatos.html
@@ -53,17 +53,16 @@
         </ul>
         <h1 class="galeria_trofeus">CAMPEONATOS ROLANDO</h1>
         <fieldset>
-        <ul class="campeonatos">
-       
-            <li><a href="#">Campeonato de volei masculino</a></li>
-            <li><a href="#">Campeonato de volei Feminino</a></li>
-            <li><a href="#">Campeonato de Futsal masculino</a></li>
-            <li><a href="#">Campeonato de Futsal Feminino</a></li>
-            <li><a href="#">Campeonato de Xadrez</a></li>
-            <li><a href="#">Campeonato de Basquete masculino</a></li>
-            <li><a href="#">Campeonato de Basquete feminino</a></li>
-        </ul>
-    </fieldset>
+            <ul class="campeonatos">
+                <li><a href="#">Campeonato de volei masculino</a></li>
+                <li><a href="#">Campeonato de volei Feminino</a></li>
+                <li><a href="#">Campeonato de Futsal masculino</a></li>
+                <li><a href="#">Campeonato de Futsal Feminino</a></li>
+                <li><a href="#">Campeonato de Xadrez</a></li>
+                <li><a href="#">Campeonato de Basquete masculino</a></li>
+                <li><a href="#">Campeonato de Basquete feminino</a></li>
+            </ul>
+        </fieldset>
     <br>
     <h1 class="galeria_trofeus"><a href="#" class="galeria_link">GALERIA DE TROFÉUS</a></h1>
        <a href="#"><img id="img_trofeus" src="img/trofeus.png" alt="Imagem de três troféus"></a>
@@ -71,16 +70,12 @@
         <br>
          <br>
           <br>
-           <br>
         <h1 class="galeria_trofeus"><a href="#" class="galeria_link">ACOMPANHE AS DATAS DAS INSCRIÇÕES</a></h1>
         <a href="#"><img id="img_trofeus" src="img/calendario.png" alt="Imagem de três troféus"></a>
          <p class="galeria_data_texto">Acompanhe por aqui o status das inscrições - revise dados ou solicite o cancelamento e fique ligado nas datas e prazos para entrega de documentos solicitados</p>
           <br>
            <br>
             <br>
-             <br>
-              <br>
-               <br>
         </section>
     </main>
     <footer id="rodape">
@@ -96,7 +91,7 @@
             <img id="ico-email" src="img/email_img.ico" alt="imagem do ícone de email na cor branca">
             <p>fateczlatletica@gmail.com</p>
         </div>
-        <p>Desenvolvido por Alan Serafim, Douglas Silva, Nataly Correia, Pablo Pontes e Thais Almeida &copy; 2021.</p>
+        <p>Desenvolvido por Alan Serafim, Douglas Silva, Pablo Pontes e Thais Almeida &copy; 2021.</p>
     </footer>
 </body>
 </html>
