ajustes finais: responsividade

--- a/eventos.html
+++ b/eventos.html
@@ -13,7 +13,7 @@
     <script type="text/javascript" src="JS/fonte.js"></script>
     <script type="text/javascript" src="JS/menu_movel.js"></script>
     <!--<link rel="icon" href="favicon.ico" type="image/x-icon">-->
-    <title>Quem Somos</title>
+    <title>Eventos</title>
 </head>
 <body>
     <header>
