--- a/contato.html
+++ b/contato.html
@@ -15,7 +15,7 @@
     <script type="text/javascript" src="JS/fonte.js"></script>
     <script type="text/javascript" src="JS/menu_movel.js"></script>
     <!--<link rel="icon" href="favicon.ico" type="image/x-icon">-->
-    <title>Document</title>
+    <title>Fale Conosco</title>
 </head>
 <body>
     <header>
