--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script type="text/javascript" src="JS/fonte.js"></script>
     <script type="text/javascript" src="JS/menu_movel.js"></script>
     <!--<link rel="icon" href="favicon.ico" type="image/x-icon">-->
-    <title>Document</title>
+    <title>Home</title>
 </head>
 <body>
     <header>
