Ajustes finais: index

--- a/index.html
+++ b/index.html
@@ -51,35 +51,35 @@
             <div class="quadro-mural">
                 <ul id="mural">
                     <li><img class="box-imagem" src="img/modalidades_mural.PNG  " alt="preencher"></li>
-                    <li>Conheça e participe das modalidades esportivas da nossa Atlética.</li>
+                    <li><p class="texto-box">Conheça e participe das modalidades esportivas da nossa Atlética.</p></li>
+                </ul>
+                <ul id="mural">
+                    <li><img class="box-imagem" src="img/eventos_multiram_atletica.jpg" alt="preencher"></li>
+                    <li><p class="texto-box">Participe do Multirão de Limpeza 2022.</p></li>
+                </ul>
+                <ul id="mural">
+                    <li><img class="box-imagem" src="img/college_vermelha.webp" alt="preencher"></li>
+                    <li><p class="texto-box">Conheça os novos produtos da lojinha da Atlética.</p></li>
                 </ul>
                 <ul id="mural">
                     <li><img class="box-imagem" src="img/logo_fatec_colorido.png" alt="preencher"></li>
-                    <li>Descrição da imagem</li>
+                    <li><p class="texto-box">Descrição da imagem</p></li>
                 </ul>
                 <ul id="mural">
                     <li><img class="box-imagem" src="img/logo_fatec_colorido.png" alt="preencher"></li>
-                    <li>Descrição da imagem</li>
+                    <li><p class="texto-box">Descrição da imagem</p></li>
                 </ul>
                 <ul id="mural">
                     <li><img class="box-imagem" src="img/logo_fatec_colorido.png" alt="preencher"></li>
-                    <li>Descrição da imagem</li>
+                    <li><p class="texto-box">Descrição da imagem</p></li>
                 </ul>
                 <ul id="mural">
                     <li><img class="box-imagem" src="img/logo_fatec_colorido.png" alt="preencher"></li>
-                    <li>Descrição da imagem</li>
+                    <li><p class="texto-box">Descrição da imagem</p></li>
                 </ul>
                 <ul id="mural">
                     <li><img class="box-imagem" src="img/logo_fatec_colorido.png" alt="preencher"></li>
-                    <li>Descrição da imagem</li>
-                </ul>
-                <ul id="mural">
-                    <li><img class="box-imagem" src="img/logo_fatec_colorido.png" alt="preencher"></li>
-                    <li>Descrição da imagem</li>
-                </ul>
-                <ul id="mural">
-                    <li><img class="box-imagem" src="img/logo_fatec_colorido.png" alt="preencher"></li>
-                    <li>Descrição da imagem</li>
+                    <li><p class="texto-box">Descrição da imagem</p></li>
                 </ul>
             </div>
         </section>
