ajustes finais: icone

--- a/campeonatos.html
+++ b/campeonatos.html
@@ -12,7 +12,7 @@
     <script type="text/javascript" src="JS/contraste.js"></script>
     <script type="text/javascript" src="JS/fonte.js"></script>
     <script type="text/javascript" src="JS/menu_movel.js"></script>
-    <!--<link rel="icon" href="favicon.ico" type="image/x-icon">-->
+    <link rel="icon" href="img/logo_icone.ico" type="image/x-icon">
     <title>Campeonatos</title>
 </head>
 <body>
