ajustes finais: descrição de imagens

--- a/campeonatos.html
+++ b/campeonatos.html
@@ -19,7 +19,7 @@
     <header>
         <div id="acessibilidade">
             <ul id="atalhos">
-                <li><a href="#main-modalidades" accesskey="1" title="Ir diretamente para o conteúdo">Ir para o conteúdo [1]</a></li>
+                <li><a href="#main-campeonatos" accesskey="1" title="Ir diretamente para o conteúdo">Ir para o conteúdo [1]</a></li>
                 <li><a href="#menu-topo" accesskey="2" title="Ir diretamente para o menu">Ir para o menu [2]</a></li>
                 <li><a href="#rodape" accesskey="3" title="Ir diretamente para o rodapé">Ir para o rodapé [3]</a></li>
                 <li id="pgacess"><a href="acessibilidade.html" title="Ir para a página de Acessibilidade">ACESSIBILIDADE</a></li>
@@ -31,7 +31,7 @@
         </div>
         <a href="index.html"><img id="logo-topo" src="img/logo_atletica_semfundo.png" alt="Imagem do logo da Atlética da Fatec Zona Leste com um escudo nas cores vermelha e amarela e uma coruja branca"></a>
         <nav>
-            <label for="bt_menu"><img id="dropdown" src="img/menu_white.ico" alt="botão de menu"></label>
+            <label for="bt_menu"><img id="dropdown" src="img/menu_white.ico" alt="Imagem do botão de menu contendo três faixas brancas"></label>
             <input type="checkbox" id="bt_menu" onclick="MudaImg()">
             <ul id="menu-topo">
                 <li><a href="quemsomos.html">QUEM SOMOS</a></li>
@@ -44,7 +44,7 @@
         </nav>
     </header>
     <main id="main-campeonatos">
-        <img id="banner-campeonatos" src="img/campeonatos_mural.png" alt="Imagem de um troféu encima de uma bola de futebol">
+        <img id="banner-campeonatos" src="img/campeonatos_mural.png" alt="Imagem de um troféu dourado em cima de uma bola de futebol">
         <section>
         <h1 class="titulo">CAMPEONATOS</h1>
         <ul class="breadcrumb">
@@ -65,13 +65,13 @@
         </fieldset>
     <br>
     <h1 class="galeria_trofeus"><a href="#" class="galeria_link">GALERIA DE TROFÉUS</a></h1>
-       <a href="#"><img id="img_trofeus" src="img/trofeus.png" alt="Imagem de três troféus"></a>
+       <a href="#"><img id="img_trofeus" src="img/trofeus.png" alt="Imagem de três troféus, respectivamente na cores prata, dourado e bronze"></a>
        <p class="galeria_texto">Viaje no tempo através da nossa galeria de troféus, reveja nossas conquistas durante todos estes anos! Veja a história da Fatec-ZL pela ótica do esporte e entretenimento.</p>
         <br>
          <br>
           <br>
         <h1 class="galeria_trofeus"><a href="#" class="galeria_link">ACOMPANHE AS DATAS DAS INSCRIÇÕES</a></h1>
-        <a href="#"><img id="img_trofeus" src="img/calendario.png" alt="Imagem de três troféus"></a>
+        <a href="#"><img id="img_trofeus" src="img/calendario.png" alt="Imagem contendo uma ilustração de uma folha de calendário"></a>
          <p class="galeria_data_texto">Acompanhe por aqui o status das inscrições - revise dados ou solicite o cancelamento e fique ligado nas datas e prazos para entrega de documentos solicitados</p>
           <br>
            <br>
