--- a/quemsomos.html
+++ b/quemsomos.html
@@ -31,7 +31,7 @@
         </div>
         <a href="index.html"><img id="logo-topo" src="img/logo_atletica_semfundo.png" alt="Imagem do logo da Atlética da Fatec Zona Leste com um escudo nas cores vermelha e amarela e uma coruja branca"></a>
         <nav>
-            <label for="bt_menu"><img id="dropdown" src="img/menu_white.ico" alt="botão de menu"></label>
+            <label for="bt_menu"><img id="dropdown" src="img/menu_white.ico" alt="Imagem do botão de menu contendo três faixas brancas"></label>
             <input type="checkbox" id="bt_menu" onclick="MudaImg()">
             <ul id="menu-topo">
                 <li><a href="quemsomos.html">QUEM SOMOS</a></li>
@@ -44,7 +44,7 @@
         </nav>
     </header>
     <main id="main-quemsomos">
-        <img id="banner-quemsomos" src="img/banner_quemsomos3.jpg" alt="DESCREVER">
+        <img id="banner-quemsomos" src="img/banner_quemsomos3.jpg" alt="Imagem contendo uma equipe esportiva juntando as mãos representando união">
         <h1 class="titulo">QUEM SOMOS</h1>
         <ul class="breadcrumb">
             <li><a href="index.html">Início</a></li>
@@ -57,13 +57,13 @@
         </section>
         <section id="historia-logos">
             <h1>Evolução dos logos</h1>
-            <img class="logo-evolucao" src="img/logo_atletica_1.png" alt="DESCREVER">
-            <img class="logo-evolucao" src="img/logo_atletica_2.png" alt="DESCREVER">
-            <img class="logo-evolucao" src="img/logo_atletica_semfundo.png" alt="DESCREVER">
+            <img class="logo-evolucao" src="img/logo_atletica_1.png" alt="Imagem do primeiro logo da Atlética contendo um escudo com o desenho de uma coruja segurando um copo de cerveja em preto e branco">
+            <img class="logo-evolucao" src="img/logo_atletica_2.png" alt="Imagem do segundo logo da Atética contendo uma coruja de asas abertas em preto e branco">
+            <img class="logo-evolucao" src="img/logo_atletica_semfundo.png" alt="Imagem do logo atual da Atlética contendo um escudo nas cores vermelha e amarela e uma coruja branca de asas abertas">
         </section>
         <section id="gestao">
             <h1>DIRETORIA 2021</h1>
-            <img id="diretoria" src="img/diretoria.jpg" alt="DESCREVER">
+            <img id="diretoria" src="img/diretoria.jpg" alt="Imagem contendo seis estudantes representando a diretoria da Atética">
             <div class="membro">
                 <h2>Nome</h2>
                 <h3>Presidente</h3>
