--- a/eventos.html
+++ b/eventos.html
@@ -31,7 +31,7 @@
         </div>
         <a href="index.html"><img id="logo-topo" src="img/logo_atletica_semfundo.png" alt="Imagem do logo da Atlética da Fatec Zona Leste com um escudo nas cores vermelha e amarela e uma coruja branca"></a>
         <nav>
-            <label for="bt_menu"><img id="dropdown" src="img/menu_white.ico" alt="botão de menu"></label>
+            <label for="bt_menu"><img id="dropdown" src="img/menu_white.ico" alt="Imagem do botão de menu contendo três faixas brancas"></label>
             <input type="checkbox" id="bt_menu" onclick="MudaImg()">
             <ul id="menu-topo">
                 <li><a href="quemsomos.html">QUEM SOMOS</a></li>
@@ -53,17 +53,17 @@
         <section id="caixa-mural-eventos">
             <div class="quadro-mural-eventos">
                 <ul id="mural-eventos">
-                    <li><img class="box-imagem-eventos" src="img/eventos_Interfatec_atletica.png" alt="Imagem de um baner dando boas vindas ao calouros de cor amarela e vermelha com dezenho de um coruja segurando um copo de cerveja"></li>
+                    <li><img class="box-imagem-eventos" src="img/eventos_Interfatec_atletica.png" alt="Imagem de um banner contendo informações sobre o evento INTERFATEC exibindo os pacotes disponíveis para compra e os respectivos valores"></li>
                     <li><h2>INTERFATEC</h2></li>
                     <li></li><P>Foi dada a largada. A INTER 2022 vem aí! Saíram os valores dos pacotes e as vendas já começaram.</p></li>
                 </ul>
                 <ul id="mural-eventos">
-                    <li><img class="box-imagem-eventos" src="img/eventos_multiram_atletica.jpg" alt="Imagem com um desenho representando um jogador de futsal na cor preta"></li>
-                    <li><h2>MULTIRAM DA LIMPEZA 2022</h2></li>
+                    <li><img class="box-imagem-eventos" src="img/eventos_multiram_atletica.jpg" alt="Imagem contendo a frase mutirão fatec zl juntamente com a data de vinte e um de novembro"></li>
+                    <li><h2>MUTIRÃO DA LIMPEZA 2022</h2></li>
                     <li><p>O mutirão ocorrerá na quinta-feira, dia 21, a partir das 8h da manhã. Obrigado pela solidariedade e ajuda. E para quem não puder comparecer, ajude-nos na divulgação, para que assim mais pessoas sejam informadas.</p></li>
                 </ul>
                 <ul id="mural-eventos">
-                    <li><img class="box-imagem-eventos" src="img/eventos_trote_atletica.jpg" alt="Imagem com um desenho representando um jogador de futsal na cor preta"></li>
+                    <li><img class="box-imagem-eventos" src="img/eventos_trote_atletica.jpg" alt="Imagem contendo o logo da Atletica e com a escrita trote primeiro semestre AFZL dois mil e vinte"></li>
                     <li><h2>Trote FATEC ZONA LESTE</h2></li>
                     <li><p>Todos os bixos que participarem do trote, vão concorrer a uma CANECA com tirante!!! E aos 50 primeiros que comprarem seu ingresso para festa concorrem a uma COLLEGE da Atlética.</p></li>  
                 </ul>   
