--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </div>
         <a href="index.html"><img id="logo-topo" src="img/logo_atletica_semfundo.png" alt="Imagem do logo da Atlética da Fatec Zona Leste com um escudo nas cores vermelha e amarela e uma coruja branca"></a>
         <nav>
-            <label for="bt_menu"><img id="dropdown" src="img/menu_white.ico" alt="botão de menu"></label>
+            <label for="bt_menu"><img id="dropdown" src="img/menu_white.ico" alt="Imagem do botão de menu contendo três faixas brancas"></label>
             <input type="checkbox" id="bt_menu" onclick="MudaImg()">
             <ul id="menu-topo">
                 <li><a href="quemsomos.html">QUEM SOMOS</a></li>
@@ -44,41 +44,41 @@
         </nav>
     </header>
     <main>
-        <img id="banner" src="img/banner_quemsomos3.jpg" alt="DESCREVER">
+        <img id="banner" src="img/banner_quemsomos3.jpg" alt="Imagem contendo uma equipe esportiva juntando as mãos representando união">
         <h1>ATLÉTICA FATEC ZONA LESTE</h1>
         <section id="caixa-mural">
             <h2>Fique por dentro do que acontece na Atlética Fatec ZL</h2>
             <div class="quadro-mural">
                 <ul id="mural">
-                    <li><img class="box-imagem" src="img/modalidades_mural.PNG  " alt="preencher"></li>
-                    <li><p class="texto-box">Conheça e participe das modalidades esportivas da nossa Atlética.</p></li>
+                    <li><img class="box-imagem" src="img/modalidades_mural.PNG  " alt="Imagem contendo a equipe de futsal feminino da Fatec"></li>
+                    <li><p class="texto-box">Conheça e participe das modalidades esportivas da nossa Atlética</p></li>
                 </ul>
                 <ul id="mural">
-                    <li><img class="box-imagem" src="img/eventos_multiram_atletica.jpg" alt="preencher"></li>
+                    <li><img class="box-imagem" src="img/eventos_multiram_atletica.jpg" alt="Imagem contendo a frase mutirão fatec zl juntamente com a data de vinte e um de novembro"></li>
                     <li><p class="texto-box">Participe do Multirão de Limpeza 2022.</p></li>
                 </ul>
                 <ul id="mural">
-                    <li><img class="box-imagem" src="img/college_vermelha.webp" alt="preencher"></li>
+                    <li><img class="box-imagem" src="img/college_vermelha.webp" alt="Imagem de um moletom college com mangas longas, abertura na frente com botões e de cor vermelha"></li>
                     <li><p class="texto-box">Conheça os novos produtos da lojinha da Atlética.</p></li>
                 </ul>
                 <ul id="mural">
-                    <li><img class="box-imagem" src="img/logo_fatec_colorido.png" alt="preencher"></li>
+                    <li><img class="box-imagem" src="img/logo_fatec_colorido.png" alt="Espaço não preenchido reservado para divulgação de atividades"></li>
                     <li><p class="texto-box">Descrição da imagem</p></li>
                 </ul>
                 <ul id="mural">
-                    <li><img class="box-imagem" src="img/logo_fatec_colorido.png" alt="preencher"></li>
+                    <li><img class="box-imagem" src="img/logo_fatec_colorido.png" alt="Espaço não preenchido reservado para divulgação de atividades"></li>
                     <li><p class="texto-box">Descrição da imagem</p></li>
                 </ul>
                 <ul id="mural">
-                    <li><img class="box-imagem" src="img/logo_fatec_colorido.png" alt="preencher"></li>
+                    <li><img class="box-imagem" src="img/logo_fatec_colorido.png" alt="Espaço não preenchido reservado para divulgação de atividades"></li>
                     <li><p class="texto-box">Descrição da imagem</p></li>
                 </ul>
                 <ul id="mural">
-                    <li><img class="box-imagem" src="img/logo_fatec_colorido.png" alt="preencher"></li>
+                    <li><img class="box-imagem" src="img/logo_fatec_colorido.png" alt="Espaço não preenchido reservado para divulgação de atividades"></li>
                     <li><p class="texto-box">Descrição da imagem</p></li>
                 </ul>
                 <ul id="mural">
-                    <li><img class="box-imagem" src="img/logo_fatec_colorido.png" alt="preencher"></li>
+                    <li><img class="box-imagem" src="img/logo_fatec_colorido.png" alt="Espaço não preenchido reservado para divulgação de atividades"></li>
                     <li><p class="texto-box">Descrição da imagem</p></li>
                 </ul>
             </div>
