--- a/modalidades.html
+++ b/modalidades.html
@@ -31,7 +31,7 @@
         </div>
         <a href="index.html"><img id="logo-topo" src="img/logo_atletica_semfundo.png" alt="Imagem do logo da Atlética da Fatec Zona Leste com um escudo nas cores vermelha e amarela e uma coruja branca"></a>
         <nav>
-            <label for="bt_menu"><img id="dropdown" src="img/menu_white.ico" alt="botão de menu"></label>
+            <label for="bt_menu"><img id="dropdown" src="img/menu_white.ico" alt="Imagem do botão de menu contendo três faixas brancas"></label>
             <input type="checkbox" id="bt_menu" onclick="MudaImg()">
             <ul id="menu-topo">
                 <li><a href="quemsomos.html">QUEM SOMOS</a></li>
@@ -44,7 +44,7 @@
         </nav>
     </header>
     <main id="main-modalidades">
-        <img id="banner-modalidades" src="img/basquete_partida.jpg" alt="Imagem em preto e branco de uma partida de jogo de basquetebol com um jogador preste a arremessar a bola">
+        <img id="banner-modalidades" src="img/basquete_partida.jpg" alt="Imagem em preto e branco de uma partida de jogo de basquetebol com um jogador arremessando a bola">
         <h1 class="titulo">MODALIDADES</h1>
         <ul class="breadcrumb">
             <li><a href="index.html">Início</a></li>
